--- a/css/styles.css
+++ b/css/styles.css
@@ -1,88 +1,121 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
+* {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #fff;
+}
+
+.game-area {
+    display: flex;
+    justify-content: space-around;
+}
+
+.title-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img {
+    height: 20rem;
+    width: 14rem;
+}
+
+.card-slot {
+    height: 20rem;
+    width: 14rem;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    line-height: 100%;
+    position: relative;
+}
+
+.visible-cards {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
 }
 
 body {
     height: 100vh;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(to right, brown, rgb(4, 104, 4));
-}
-
-.deck {
-    display: flex;
-    height: 18rem;
-    width: 14rem;
-    border: 1px solid black;
-    justify-content: center;
-    align-items: center;
-    border-radius: .7rem;
-    color: goldenrod;
-    font-size: 5rem;
-    font-family: fantasy;
-    font-weight: 500;
-}
-
-.card-slot {
-    height: 18rem;
-    width: 14rem;
-    border: 1px solid black;
-    border-radius: .7rem;
-    margin-left: 2rem;
-    background-color: #ffffff;
-}
-
-.comp {
-    display: flex;
-    margin-right: 5rem;
-}
-
-.player {
-    display: flex;
-    margin-left: 5rem;
-
-}
-
-.computer-deck {
-    background-color: rgb(22, 90, 22);
-}
-
-.player-deck {
-    background-color: rgb(129, 43, 43);
-}
-
-.text {
-    font-size: 2.5rem;
-    margin-bottom: 5rem;
-    color: goldenrod;
-    font-weight: 700;
-    font-family: fantasy;
-}
-
-.game-info {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-image: linear-gradient(to bottom right, black, red);
+}
+
+.player1-area {
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player2-area {
+    margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card.red {
+    color: rgb(233, 12, 12);
+}
+
+.card.black {
+    color: rgb(0, 0, 0);
+}
+
+.hand {
+    margin-right: 20px;
 }
 
 .draw-button {
-    height: 3rem;
-    border-style: none;
-    background-color: #2b2b2c;
-    color: goldenrod;
-    font-family: fantasy;
+    height: 40px;
+    width: 100px;
+    margin-top: 10px;
+    color: black;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+#player1-name {
+    font-size: 30px;
+}
+
+#player2-name {
+    font-size: 30px;
+}
+
+.deck {
+    font-size: 30px;
+}
+
+.text {
+    font-size: 30px;
+}
+
+.card::before,
+.card::after {
+    position: absolute;
+    content: attr(data-value);
     font-size: 2rem;
-    letter-spacing: 2px;
-    border-radius: .5rem;
 }
 
-.draw-button:hover {
-    background-color: #3e3e3e;
+.card::before {
+    top: .5rem;
+    left: .5rem;
+    transform: translateY(-35%);
 }
 
-.draw-button:active {
-    scale: .9;
+.card::after {
+    bottom: .1rem;
+    right: .5rem;
+    transform: rotate(180deg);
+    transform: translateY(30%);
 }
